# py-template

./: README.md  build.sh  main.py  pyproject.toml  requirements.txt
